Select All checkbox fix
Issue-ID: ACUMOS-3870, ACUMOS-3873
Description: Select All checkbox fix

Change-Id: If669a395faecc308f86df1f2fb097b9dac1bea8c
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
@@ -415,7 +415,7 @@ limitations under the License.
 									<td>{{val.name}}</td>
 									<td>{{val.moduleList}}</td>
 									<td>
-										<button  class="mdl-button mdl-button--icon" ng-click="addNewRole(val);" ng-disabled="val.name=='Admin'" ng-class="{disabledClick: (val.name=='Admin')}">
+										<button  class="mdl-button mdl-button--icon" ng-click="addNewRole(val);" ng-disabled="val.name=='Admin'">
 											<span class="gridicon-edit" ng-class="(val.name =='Admin') ? 'disabled' : '' "></span>
 										</button>
 										<button class="mdl-button mdl-button--icon" type="button"  aria-label="Delete" title="Delete"  ng-class="{disabledClick: (val.name=='Admin')}" ng-disabled="val.name=='Admin'" ng-click="confirmDeleteRole(val)">
