license profile in a human readable format
Change-Id: I79f49c02b6c845516ceb47e6206923859c199947
Issue-Id: ACUMOS-3749
Description: As a model user, I would like to view the license profile in a human readable format
Signed-off-by: mcapraful <PD00618320@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -483,9 +483,8 @@ limitations under the License.
 	                              Close
 							</button>
 						</div>
-						<div ng-if="modelLicense">
-							<pre class="wrap" ng-if="modelLicense && changeLicense==false">{{modelLicense | json: 4}}</pre>
-						</div>
+
+						<pre ng-if="modelLicense && changeLicense==false" class="licensedisplay" ng-bind-html="yaml"></pre>
 						
 						<div ng-show="isLicenseFound===false && isLoadingLicense===true">Loading License...</div>
 						<div class="noresult" ng-show="isLicenseFound===false && isLoadingLicense===false">No license profile attached, please attach a license profile. </div>
