--- a/acumos-portal-fe/src/main/webapp/index.html
+++ b/acumos-portal-fe/src/main/webapp/index.html
@@ -147,6 +147,7 @@ limitations under the License.
 <script src="app/resources/angular-base64-upload.js"></script>
 <script src="app/resources/bootstrap.min.js"></script>
 <script src="app/resources/xeditable.min.js"></script>
+<script src="app/resources/json2yaml.js"></script>
 
 </head>
 <body>
