fix for close button
Change-Id: Ifd2192ea023e5b97f500cd518e069d1120b8954c
ISSUE-ID: ACUMOS-3965
Description: IST: ManageMyModel: Deploy to Cloud: Quit/Cancel/Ok button not working on deploy to cloud popup
Signed-off-by: BelagamSrividya <BS00561090@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -1169,7 +1169,7 @@ limitations under the License.
 																				ng-show="$root.progressBar != 100 && $root.progressBar != 0">Uploading</span>
 																			<span ng-show="$root.progressBar == 100">Done</span>
 																		</div>
-																		<div class="fileclose" ng-click="closePoup(true)">
+																		<div class="fileclose" ng-click="closeLicensePoup(true)">
 																			<i class="material-icons">close</i>
 																		</div>
 																	</div>
