Preview model using older template license profile
Change-Id: Ifbcb5d03404f328aee95f159586265ab7b45350a
Issue-Id: ACUMOS-3968
Description: Preview model view using older template of license profile
Signed-off-by: mcapraful <PD00618320@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -2004,8 +2004,8 @@ limitations under the License.
 																			<div class="mdl-tabs__panel" id="tab7-panel">
 																				<h6 class="sectiontitle6">LICENSE PROFILE</h6>
 																				<div ng-show= "modelLicense">
-																					<pre class="wrap" ng-if="!isLicenseJson && modelLicense">{{modelLicense}}</pre>
-																					<pre class="wrap" ng-if="isLicenseJson && modelLicense">{{modelLicense | json: 4}}</pre>
+																					<pre class="licensedisplay" ng-if="!isLicenseJson && modelLicense" ng-bind-html="yaml"></pre>
+																					<pre class="licensedisplay" ng-if="isLicenseJson && modelLicense" ng-bind-html="yaml"></pre>
 																				</div>
 																				<pre ng-show="modelLicenseError">{{modelLicenseError}}</pre>
 																			</div>
